[gd_scene load_steps=9 format=3 uid="uid://0fas0t8lbnqt"]

[ext_resource type="Texture2D" uid="uid://ctwjjvnojdxgn" path="res://sprites/goomba.png" id="1_1m4fe"]
[ext_resource type="Script" path="res://scripts/entities/goomba.gd" id="1_ney8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4bwx"]
size = Vector2(16, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p6b0"]
atlas = ExtResource("1_1m4fe")
region = Rect2(60, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_03w7l"]
atlas = ExtResource("1_1m4fe")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3d4p"]
atlas = ExtResource("1_1m4fe")
region = Rect2(30, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yipj1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p6b0")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03w7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3d4p")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_earko"]
size = Vector2(16, 5)

[node name="Goomba" type="CharacterBody2D"]
script = ExtResource("1_ney8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_v4bwx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_yipj1")
animation = &"walk"

[node name="StompArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_earko")
debug_color = Color(0.971091, 0, 0.450316, 0.42)

[node name="RightRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(9, 0)

[node name="LeftRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, 0)
target_position = Vector2(-8, 0)

[connection signal="body_entered" from="StompArea" to="." method="_on_stomp_area_body_entered"]
